eu4_parse.css
main {
	max-width: 1200px;
	margin: auto;
	background: #eee;
	padding: 0 0.5em;
	min-height: 95vh;
}

h1 {max-width: max-content; margin: auto;}

#error {
	position: fixed;
	top: 1em; left: 50%; transform: translateX(-50%); /* Position: top center */
	border: 1px solid red;
	background: #fbb;
	font-size: 150%;
	padding: 2em;
}

#now_parsing {
	border: 1px solid cyan;
	background: #dff;
	padding: 0.5em;
	margin-bottom: 0.5em;
}

#menu {
	background: #efe;
	border: 1px solid green;
	padding: 0.5em;
}

.hidden {display: none}

details {
	border: 1px solid black;
	margin: 1em 0;
}
table {
	border-collapse: collapse;
	margin: 0.25em;
}
td {padding: 2px;}

/* Highlighting is always done with the same CSS classes, but the precise
color choice can be overridden based on its parent. */
.interesting3 {background: #bfd;}
.interesting2 {background: #bfd;}
.interesting1 {background: #bff;}
/* .interesting0 gets no background change */

#wars details {
	margin: 1em;
}

#wars .attacker {background: #e1c0c0;}
#wars .attacker-player {background: #e1c300;}
#wars .attacker-total {background: #cd8080;}
#wars .defender {background: #c0c0e1;}
#wars .defender-player {background: #00c3e1;}
#wars .defender-total {background: #8080cd;}

.provbtn {
	margin-left: 0.25em;
	cursor: pointer;
	background: #ccffff;
	border: 1px solid #bbdddd;
}

#options {
	position: fixed;
	top: 0.25em; right: 0.25em;
	border: 1px solid black;
	background: #ffeeff;
	padding: 0 0.5em;
}

.province {
	display: inline-block;
}
#upgradeables .province {margin-left: 1em;}

#interesting_details {margin: 0;}
#interesting_details li {
	margin: 1em 0;
	cursor: pointer;
}

.provgroup {
	display: inline-block;
	font-weight: bold;
	cursor: pointer;
}
.provgroup.empty {cursor: default;} /* Not "inherit" which would give an ibeam */
.provgroup.clear {font-size: 60%;}
.size-1: {font-size: 1.5em;}
.size-2: {font-size: 1.175em;}
.size-3: {font-size: 1em;}

.indent {padding-left: 1em;}

#search strong {
	background: #efe;
}

.caution {margin: 0 0.5em; cursor: default;}

.flag.small {
	height: 1.25em;
}
.flag.large {
	display: block;
	margin: auto;
}
#hovercountry {
	margin: 0.5em;
	border: 1px solid black;
	padding: 0.5em;
	position: relative;
}
#hovercountry h3 {
	margin: 0;
	text-align: center; /* Center the country name under the flag */
}
#hovercountry .close {
	position: absolute;
	right: 0; top: 0;
	cursor: pointer;
}

.tech {padding: 0 0.25em;}
.tech.above {background: #fbd;}
.tech.below {background: #efe;}

